@@ -87,7 +87,7 @@ a different orientation, according to the TIFF/EXIF conventions:
 \begin{tabular}{p{0.3in} p{4in}}
 1 & normal (top to bottom, left to right)  \\
 2 & flipped horizontally (top to botom, right to left)  \\
-3 & rotate $180^\circ$ (bottom to top, right to left) \\
+3 & rotated $180^\circ$ (bottom to top, right to left) \\
 4 & flipped vertically (bottom to top, left to right)  \\
 5 & transposed (left to right, top to bottom) \\
 6 & rotated $90^\circ$ clockwise (right to left, top to bottom) \\
