@@ -27,7 +27,8 @@ for f in [ "black.tif", "filled.tif", "checker.tif",
            "chappend-rgbaz.exr", "flat.exr",
            "crop.tif", "cut.tif", "pasted.tif",
            "rotate90.tif", "rotate180.tif", "rotate270.tif",
-           "flip.tif", "flop.tif", "flipflop.tif", "transpose.tif",
+           "flip.tif", "flop.tif", "flipflop.tif", "reorient1.tif",
+           "transpose.tif",
            "cshift.tif", "cadd1.exr", "cadd2.exr", "add.exr", "sub.exr",
            "cmul1.exr", "cmul2.exr", "cpow1.exr", "cpow2.exr",
            "chsum.tif", "grid-clamped.tif",
