@@ -17,6 +17,9 @@ Fixes, minor enhancements, and performance improvements:
      simply flipping or flopping within the data window. (1.5.2)
    * rotate90(), rotate180(), rotate270() rotate the image in 90 degree
      axially-aligned increments. (1.5.2)
+   * reorient() will perform whatever series of rotations or flips are
+     necessary to move the pixels to match the Orientation metadata that
+     describes the desired display orientation. (1.5.2)
 * oiiotool:
    * oiiotool --nosoftwareattrib suppresses the altering of Software and
      ImageHistory fields upon output. (1.5.1)
@@ -45,6 +48,9 @@ Fixes, minor enhancements, and performance improvements:
      data. (1.5.2)
    * oiiotool --rotate90, --rotate180, --rotate270 rotate the image in
      90 degree axially-aligned increments. (1.5.2)
+   * oiiotool --reorient will perform whatever series of rotations or
+     flips are necessary to move the pixels to match the Orientation
+     metadata that describes the desired display orientation. (1.5.2)
 * maketx:
    * Fix case typo for LatLong env map creation when in 'prman' mode. #877.
      (1.5.1/1.4.10)
